@@ -1,3 +1,3 @@
 Render System	OpenGL Rendering Subsystem
 Full Screen	No
-Video Mode	800 x 600
+Video Mode	1024 x 768
