@@ -1,7 +1,7 @@
 # Defines plugins to load
 
 # Define plugin folder
-PluginFolder=/opt/lib/OGRE
+PluginFolder=/usr/local/lib/OGRE
 
 # Define D3D rendering implementation plugin
 Plugin=RenderSystem_GL.so
